--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -173,6 +173,7 @@
 		"typeorm": "0.3.17",
 		"typescript": "5.2.2",
 		"ulid": "2.3.0",
+		"uuid": "^9.0.1",
 		"vary": "1.1.2",
 		"web-push": "3.6.6",
 		"ws": "8.14.2",
@@ -218,6 +219,7 @@
 		"@types/sinonjs__fake-timers": "8.1.4",
 		"@types/tinycolor2": "1.4.5",
 		"@types/tmp": "0.2.5",
+		"@types/uuid": "^9.0.4",
 		"@types/vary": "1.1.2",
 		"@types/web-push": "3.6.2",
 		"@types/ws": "8.5.8",
