--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "cherrypick",
-	"version": "4.5.0-rc.1",
+	"name": "Re:Lovers",
+	"version": "0.0.1_dev1",
 	"basedMisskeyVersion": "2023.11.0",
 	"codename": "nasubi",
 	"repository": {
