--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
 	"name": "Re:Lovers",
-	"version": "0.0.1_beta1",
+	"version": "0.0.1_rc1",
 	"basedMisskeyVersion": "2023.11.0",
+	"basedCherryPickVersion": "4.5.0_rc2",
 	"codename": "Re:Start",
 	"repository": {
 		"type": "git",
