--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "Re:Lovers",
-	"version": "0.0.1_beta1",
+	"version": "0.0.1_test4.3",
 	"basedMisskeyVersion": "2023.11.0",
 	"codename": "Re:Start",
 	"repository": {
