--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "Re:Lovers",
 	"version": "0.0.1_rc2",
 	"basedMisskeyVersion": "2023.11.0",
-	"basedCherryPickVersion": "4.5.0_rc2",
+	"basedCherryPickVersion": "4.5.0",
 	"codename": "Re:Start",
 	"repository": {
 		"type": "git",
