--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "Re:Lovers",
-	"version": "0.0.1_rc2",
+	"version": "0.0.1_test4.5-background-1",
 	"basedMisskeyVersion": "2023.11.0",
 	"basedCherryPickVersion": "4.5.0",
 	"codename": "Re:Start",
